tests/config_module_system_node_allow_root_relative/config_module_system_node_allow_root_relative.exp
Error ----------------------------------------------------------------------------------------------- subdir/test.js:6:1

Cannot cast `ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   subdir/test.js:6:1
   6| ambiguous as empty
      ^^^^^^^^^

References:
   ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   subdir/test.js:6:14
   6| ambiguous as empty
                   ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- subdir/test.js:9:1

Cannot cast `sub_ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   subdir/test.js:9:1
   9| sub_ambiguous as empty
      ^^^^^^^^^^^^^

References:
   subdir/ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   subdir/test.js:9:18
   9| sub_ambiguous as empty
                       ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:13:1

Cannot cast `user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   subdir/test.js:13:1
   13| user_code as empty
       ^^^^^^^^^

References:
   user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:13:14
   13| user_code as empty
                    ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:16:1

Cannot cast `sub_user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   subdir/test.js:16:1
   16| sub_user_code as empty
       ^^^^^^^^^^^^^

References:
   subdir/user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:16:18
   16| sub_user_code as empty
                        ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:20:1

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-type]

   subdir/test.js:20:1
   20| node_code as empty
       ^^^^^^^^^

References:
   node_modules/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:20:14
   20| node_code as empty
                    ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- subdir/test.js:23:1

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-type]

   subdir/test.js:23:1
   23| sub_node_code as empty
       ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   subdir/test.js:23:18
   23| sub_node_code as empty
                        ^^^^^ [2]


Error --------------------------------------------------------------------------------------------- subdir/test.js:26:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   26| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------- subdir/test.js:27:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   27| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:3:1
   3| ambiguous as empty
      ^^^^^^^^^

References:
   ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   test.js:3:14
   3| ambiguous as empty
                   ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:6:1

Cannot cast `sub_ambiguous` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:6:1
   6| sub_ambiguous as empty
      ^^^^^^^^^^^^^

References:
   subdir/ambiguous.js:1:14
   1| const value: "user_code" = "user_code";
                   ^^^^^^^^^^^ [1]
   test.js:6:18
   6| sub_ambiguous as empty
                       ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:10:1

Cannot cast `user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:10:1
   10| user_code as empty
       ^^^^^^^^^

References:
   user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   test.js:10:14
   10| user_code as empty
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:13:1

Cannot cast `sub_user_code` to empty because string literal `user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:13:1
   13| sub_user_code as empty
       ^^^^^^^^^^^^^

References:
   subdir/user_code.js:1:14
    1| const value: "user_code" = "user_code";
                    ^^^^^^^^^^^ [1]
   test.js:13:18
   13| sub_user_code as empty
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:1

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:17:1
   17| node_code as empty
       ^^^^^^^^^

References:
   node_modules/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:17:14
   17| node_code as empty
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:1

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:20:1
   20| sub_node_code as empty
       ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:20:18
   20| sub_node_code as empty
                        ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:23:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   23| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:24:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   24| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^



Found 16 errors
